--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,4 +22,13 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+webrtc = "0.12"
+tokio = { version = "1", features = ["full"] }
+async-trait = "0.1"
+thiserror = "2"
+gstreamer = "0.23.5"
+gstreamer-app = "0.23.5"
+gstreamer-webrtc = "0.23.5"
+gstreamer-sdp = "0.23.5"
+futures = "0.3"
 
