--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = "1"
 webrtc = "0.12"
 tokio = { version = "1", features = ["full"] }
 async-trait = "0.1"
+once_cell = "1.19"
 thiserror = "2"
 gstreamer = "0.23.5"
 gstreamer-app = "0.23.5"
